# EndianLib

./: .gitignore  CMakeLists.txt  README.MD
.github/workflows/: cmake-multi-platform.yml
include/: endian.hpp
include/EndianLib/: endian.hpp
tests/: endian_test.cpp
